added about our application goal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
             <div class="title">
 
-                <h2>Fitness Track</h2></div>
+                <h2>Fitness Track Application </h2></div>
+                <p>Fitness Track web application concentrates on the fitness activities of a user on the daily basis. </p>
 </div>
 </div>
 <div class="footer">
